# EdutainmentForge

./: .dockerignore  .env.example  .env.minimal  .env.production.template  .env.sample  .env.template  .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_SECURITY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  COST_OPTIMIZATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile  FINAL_COMMIT_NOTES.md  KEYVAULT_INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_SAFETY.md  README.md  RELEASE_NOTES.md  REPOSITORY_CLEANUP.md  analyze_content.py  app.py  azure-container-app.yaml  azure-infrastructure.bicep  azure.yaml  build-container.sh  create_dummy_podcasts.py  debug_script_parsing.py  demo_voices.py  deploy-secure.sh  (+34 more)
.github/: PROJECT_BOARD_QUICK_REF.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hackathon_task.md
.github/workflows/: deploy.yml  enhanced-project-management.yml  project-board.yml
archive/: catalog_legacy.py
backend/: package.json
backend/src/clients/: SpeechClient.ts
backend/src/functions/: Activities.ts  GeneratePodcastOrchestrator.ts
backend/src/models/: Episode.ts
config/: .pre-commit-config.yaml
data/: feedback.json
data/catalog/: certifications_manifest.json  module_uids.txt  url_manifest.json
deploy/: azure-container-app.yaml  deploy-aci.sh  deploy-azure.sh  main.bicep
docs/: AUTHENTICATION.md  CLEANUP_FINAL.md  CONFIGURATION.md  CONTAINER_MANAGEMENT.md  DEVELOPMENT.md  PROJECT_BOARD.md  azure-speech-setup.md  azure-speech-status.md  development-guide.md
docs/archive/: GITHUB_ACTIONS_SETUP.md  README.md  SECURE_DEPLOYMENT.md
infrastructure/: DEPLOYMENT_GUIDE.md  README.md  azure-container-app.yaml  azure-infrastructure.bicep  setup-secrets.sh
infrastructure/archive/: azure-infrastructure-legacy.bicep
scripts/: cleanup_dev_files.py  cleanup_podcasts.py  deploy-container-to-azure.sh  deploy-container.sh  manage-container.sh  monitor_costs.py  process_role.py  refresh_modules.py  setup-auth.sh  setup-project-board.sh  setup.sh  smoke_test.sh  sync_certifications_manifest_storage.py  sync_manifest_storage.py  test-project-board.py  test_quick.py  update_certifications.py  update_url_manifest.py
src/: main.py
src/audio/: __init__.py  audio_compat.py  multivoice_tts.py  processor.py  speechGeneration.py  ssmlFormatter.py  test_speechGeneration.py  tts.py
src/auth/: __init__.py  auth_service.py  config.py  decorators.py
src/batch/: __init__.py  processor.py
src/content/: __init__.py  ai_enhancer.py  catalog.py  catalog_adapter.py  certifications_manifest.py  clean_catalog.py  fetcher.py  processor.py  url_cache.py
src/edutainmentforge/: __init__.py  cli.py
src/ingestion/: base_ingestor.py  ms_docs_ingestor.py  ms_learn_ingestor.py
src/pipeline/: processingPipeline.py
src/ui/: __init__.py  cli.py
src/utils/: __init__.py  cache.py  config.py  dev_mock.py  feedback_store.py  keyvault.py  logger.py  premium_integration.py  rate_limit.py  task_queue.py  task_store.py
templates/: batch.html  discover.html  index.html  library.html  login.html  profile.html
tests/: __init__.py  conftest.py  test_audio.py  test_content.py  test_utils.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_catalog_service.py  test_fetcher_catalog_integration.py
tests/unit/fixtures/: sample_module_page.html
