[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edutainmentforge"
version = "2.0.0"
description = "Transform Microsoft Learn content into engaging, conversational podcasts with AI-powered multi-voice narration."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "EdutainmentForge Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "azure-cognitiveservices-speech>=1.34.0",
    "openai>=1.12.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-identity>=1.15.0",
    "pyttsx3>=2.90",
    "pydub>=0.25.1",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
edutainmentforge = "edutainmentforge.cli:main"
podcast-cli = "edutainmentforge.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/edutainmentforge"
Repository = "https://github.com/yourusername/edutainmentforge"
Documentation = "https://github.com/yourusername/edutainmentforge/blob/main/README.md"
"Bug Reports" = "https://github.com/yourusername/edutainmentforge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
edutainmentforge = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "azure: marks tests that require Azure services",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["edutainmentforge"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "pydub.*",
    "pyttsx3.*",
]
ignore_missing_imports = true
